test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/and_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  (
  void
  )
  const int(1)
  &&
  const int(2)
  ;
  }
